--- a/index.html
+++ b/index.html
@@ -5,31 +5,94 @@
 <head> 
 	<h2><center>Резюме:</h2></center>
 	<H1> <center> Собакарь Ольга</H1></center>
+	<link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 	<h3>
   	Я Ольга. 	 
  	Мне 29) и я работаю в VRTech.</h3>
- 	<p> Родилась я у мамы с папой в далеком прошлом. 
- 	</p>
- 	<p> И в от этом месте <img  width="200" src="f1325.jpg"/>
- 	</p>
-    <p> <a href= "https://vk.com/id179094644"> Профиль VK</a> </p>
+ 	<p> Родилась я у мамы с папой в далеком прошлом.</p>
+ 	<p> И вот в этом месте!</p>
+ 		<p><img  width="500" src="f1325.jpg"/></p>
+    <p> <a id="a1" href= "https://vk.com/id179094644"> 
+    	<h2>Профиль VK</a></h2> </p>
     <table border="3">
-    	<caption>Таблица</caption>
+    	<caption><h3>Таблица, типа смогла сделать</h3></caption>
+    	<col width="50">
         <tr> 
-        <td>2</td><td>3</td>
+        <td>2</td><td>3</td><td>2</td><td>3</td>
         </tr> 
+        <col center="100" width="50">
     	<tr>
-    	<td>2</td>    	
+    	<td>2</td><td>2</td><td>3</td><td>2</td>    	
         </tr> 
+        <col width="50">
     	<tr>
-        <td>2</td>
+        <td>2</td><td>2</td><td>3</td><td>2</td>
     	 </tr> 
+    	 <col width="50">
     	 <tr>
-    		<td>2</td>
+    		<td>2</td><td>2</td><td>3</td><td>2</td>
     	</tr> 
     </table>
+<div> 	
+<H3>Признание</H3></br>
 
-</body>
+Я вас люблю, хоть я бешусь,</br>
+Хоть это труд и стыд напрасный, </br>
+И в этой глупости несчастной </br>
+У ваших ног я признаюсь!</br>
+Мне не к лицу и не по летам... </br>
+Пора, пора мне быть умней! </br>
+Но узнаю по всем приметам </br>
+Болезнь любви в душе моей:</br>
+</br>
+Без вас мне скучно, — я зеваю; </br>
+При вас мне грустно, — я терплю; </br>
+И, мочи нет, сказать желаю, </br>
+Мой ангел, как я вас люблю!</br>
+</br>
+Когда я слышу из гостиной </br>
+Ваш легкий шаг, иль платья шум, </br>
+Иль голос девственный, невинный, </br>
+Я вдруг теряю весь свой ум.</br>
+</br>
+Вы улыбнетесь, — мне отрада; </br>
+Вы отвернетесь, — мне тоска; </br>
+За день мучения — награда </br>
+Мне ваша бледная рука.</br>
+</br>
+Когда за пяльцами прилежно </br>
+Сидите вы, склонясь небрежно, </br>
+Глаза и кудри опустя, — </br>
+Я в умиленье, молча, нежно </br>
+Любуюсь вами, как дитя!..</br>
+</br>
+Сказать ли вам мое несчастье, </br>
+Мою ревнивую печаль, </br>
+Когда гулять, порой в ненастье, </br>
+Вы собираетеся вдаль?</br>
+</br>
+И ваши слезы в одиночку, </br>
+И речи в уголку вдвоем, </br>
+И путешествия в Опочку, </br>
+И фортепьяно вечерком?..</br>
+</br>
+Алина! сжальтесь надо мною. </br>
+Не смею требовать любви. </br>
+Быть может, за грехи мои, </br>
+Мой ангел, я любви не стою!</br>
+</br>
+Но притворитесь! Этот взгляд </br>
+Все может выразить так чудно! </br>
+Ах, обмануть меня нетрудно!.. </br>
+Я сам обманываться рад!</div>
+<a href="^" class="a2"> Человек! </a></br>
+<a href="^" class="a3"> Животное! </a></br>
+<a href="^" class="a4"> Животное! </a></br>
+<a href="^" class="a5"> Животное! </a></br>
+<div class="messager">Все файлы успешно удалены!!!</div>
+<div id="test">CSS3</div>
+<div id="test1">CSS3</div>
+</body></br>
 </html>
