--- a/index.html
+++ b/index.html
@@ -94,5 +94,6 @@
 <div class="messager">Все файлы успешно удалены!!!</div>
 <div id="test">CSS3</div>
 <div id="test1">CSS3</div>
+<div id="test3">Штука своя</div>
 </body></br>
 </html>
